# Shinkansen-Simulator

./: .gitignore  Cargo.toml  README.md
assets/: tokyo_tower.glb
reference/: e8-shinkansen-tokyo.html
src/: audio.rs  camera.rs  city.rs  clusters.rs  driver.rs  geo.rs  ground.rs  houses.rs  hud.rs  input.rs  lamps.rs  landmarks.rs  main.rs  minimap.rs  motion.rs  physics.rs  roads.rs  route.rs  sky.rs  spline.rs  stations.rs  tokyo.rs  track.rs  train.rs  trees.rs  water.rs
tools/: extract_osm.py
